k8s/helms/ingress-apple-banana/banana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana
spec:
  selector:
    matchLabels:
      app: banana
  replicas: 1
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
        - "-text=banana"
        ports:
        - containerPort: 5678
