k8s/helms/ingress-apple-banana/demo-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange
spec:
  selector:
    matchLabels:
      app: orange
  replicas: 1
  template:
    metadata:
      labels:
        app: orange
    spec:
      containers:
      - name: orange
        image: hashicorp/http-echo
        args:
        - "-text=orange"
        ports:
        - containerPort: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: orange-service
spec:
  selector:
    app: orange
  ports:
    - port: 5678
      targetPort: 5678
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orange-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /orange
          pathType: Prefix
          backend:
            service:
              name: orange-service
              port:
                number: 5678
